Website/static/enroll_page.css
.container{
    padding: 3%;
    display: flex;
}

body{
    background-color: rgba(219, 219, 219, 0.932);    
    margin: 0;
    padding: 0;
}

.body-layer{
    border-radius: 10px;
    border: 3px solid #73AD21;
    background-color: rgb(255, 255, 255);
    flex-direction: column;
    flex: 2;
    display: flex;
    align-items: center;
    margin: 0px;
    width: 900px;
    height: 600px;
}
.body-text{
    background-color: #73AD21;
    width: 100%;
    font-size: 30px;
   

}

.table,th,td{
    border: 2.5px solid;
    align-items: center;
}

table{
    padding-top: 5%;
    padding-left: 5%;
    position: static;

}
th,td{
    padding: 20px;
}

tr:nth-child(odd){
    background-color: #ddd;
}

tr:nth-child(even){
    background-color: #fff;
}

.enroll-button{
    background-color: #3a3f3e;
    color: white;
    padding: 10px;
    margin: 50px;
    border-radius: 5px;
    cursor: pointer;
    width: 60px;
    position: absolute;
    margin-left: -50px;
    bottom: 0px;
}

.drop-button{
    font-size: 17px;
    font-family: Arial, Helvetica, sans-serif;
    cursor: pointer;
    position: absolute;
    margin-left: 450px;
    bottom: 105px;
    
}

.course-box{
    margin: 200px;    
}

